# MuseGraph

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/server-py/: .env.example  alembic.ini  pyproject.toml  seed.py
apps/server-py/alembic/: env.py
apps/server-py/alembic/versions/: 001_initial.py  001_platform_baseline.py  002_add_project_ontology_schema.py  002_fact_agent_sessions.py  003_add_project_oasis_and_component_models.py  003_payment_adapters.py  004_add_project_chapters.py  004_usage_detail_retention.py  005_prompt_skills.py  005_remove_legacy_groups_and_plans.py  006_expand_user_balance_precision.py  006_skill_ownership.py  007_add_project_characters.py  008_add_glossary_and_worldbook.py  009_add_project_operation_prompts.py
apps/server-py/app/: __init__.py  agent_worker_main.py  config.py  database.py  dependencies.py  main.py  memory_service_main.py  redis.py  storage.py
apps/server-py/app/models/: __init__.py  billing.py  config.py  payment_adapter.py  project.py  runtime.py  user.py
apps/server-py/app/routers/: __init__.py  admin.py  agent.py  ai.py  auth.py  billing.py  cognee_graph.py  export.py  facts.py  graph.py  groups.py  memory.py  memory_tasks.py  memory_utils.py  payment.py  project_agents.py  project_files.py  project_versions.py  projects.py  prompt_templates.py  report.py  simulation.py  skills.py  user_providers.py  users.py
apps/server-py/app/schemas/: auth.py  (+13 more)
apps/server-py/scripts/: run_graphiti_smoke.py
apps/server-py/tests/: __init__.py  conftest.py  test_admin.py  test_admin_extended.py  test_agent_session.py  test_ai_service.py  test_auth.py  test_billing.py  test_chapter_writeback.py  test_cognee_graph.py  test_cognee_graph_extended.py  test_cognee_service.py  test_creative_memory.py  test_creative_task_planner.py  test_creative_workflow.py  test_e2e_core_flow.py  test_export.py  test_export_router.py  test_export_service.py  test_fact_entities.py  test_fact_memory.py  test_graph_router.py  test_graph_router_extended.py  test_graphiti_graph_service.py  test_groups_router.py  test_llm_json.py  test_llm_runtime_config.py  test_memory_router.py  test_memory_router_extended.py  test_memory_service.py  test_oasis_service.py  test_ontology_service.py  test_operations.py  test_payment.py  test_payment_router.py  test_payment_service.py  test_pi_tool_loop.py  test_platform_integration.py  test_prediction_service.py  test_pricing.py  (+21 more)
(+308 files in other folders)
