[project]
name = "musegraph-server"
version = "0.1.0"
description = "MuseGraph AI Text Creation & Knowledge Graph Server"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.51.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.31.0",
    "alembic>=1.18.5",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.2",
    "redis[hiredis]>=8.0.1",
    "pwdlib[argon2]>=0.3.0",
    "python-multipart>=0.0.32",
    "cognee>=1.3.0",
    "httpx>=0.28.1",
    "sse-starlette>=3.4.5",
    "python-docx>=1.2.0",
    "pypdf>=6.14.2",
    "litellm>=1.92.0",
    "pi-coding-agent-python-sdk>=0.4.3",
    "dulwich>=1.2.11",
    "PyYAML>=6.0.3",
]

[project.optional-dependencies]
test = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.28.1",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

artifacts = [
  "app/services/agent/packs/*.yaml",
  "app/services/agent/packs/templates/*.md",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
